// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomerProjectsTableModel Tests Actions column 1`] = `
<span>
  <span>
    <button
      aria-label="Left Align"
      className="btn-circle btn btn-outline-secondary"
      disabled={undefined}
      onClick={[Function]}
      type="button"
    >
      <img
        alt="info"
        src="../../style/open-iconic-master/svg/info.svg"
        style={undefined}
      />
    </button>
    <button
      aria-label="Left Align"
      className="btn-circle btn btn-outline-secondary disabled"
      disabled={true}
      onClick={[Function]}
      type="button"
    >
      <img
        alt="pencil"
        src="../../style/open-iconic-master/svg/pencil.svg"
        style={
          Object {
            "marginLeft": "2px",
          }
        }
      />
    </button>
  </span>
</span>
`;

exports[`CustomerProjectsTableModel Tests Actions column 2`] = `
<span>
  <span>
    <button
      aria-label="Left Align"
      className="btn-circle btn btn-outline-secondary"
      disabled={undefined}
      onClick={[Function]}
      type="button"
    >
      <img
        alt="info"
        src="../../style/open-iconic-master/svg/info.svg"
        style={undefined}
      />
    </button>
    <button
      aria-label="Left Align"
      className="btn-circle btn btn-outline-secondary disabled"
      disabled={true}
      onClick={[Function]}
      type="button"
    >
      <img
        alt="pencil"
        src="../../style/open-iconic-master/svg/pencil.svg"
        style={
          Object {
            "marginLeft": "2px",
          }
        }
      />
    </button>
    <button
      aria-label="Left Align"
      className="btn-circle btn btn-outline-secondary"
      disabled={undefined}
      onClick={[Function]}
      type="button"
    >
      <img
        alt="trash"
        src="../../style/open-iconic-master/svg/trash.svg"
        style={
          Object {
            "marginLeft": "2px",
          }
        }
      />
    </button>
  </span>
</span>
`;

exports[`CustomerProjectsTableModel Tests Status Cell 1`] = `
<span>
  <span
    style={
      Object {
        "color": "#57d500",
        "transition": "all .3s ease",
      }
    }
  >
    ●
  </span>
   undefined
</span>
`;
